<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        android:id="@+id/profile_img"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:contentDescription="@string/nav_header_desc"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round" />
    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        android:background="#505050" />
        <TextView
            android:textColor="#000"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/navbar_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle" />
        <TextView
            android:textColor="#2C2C2C"
            android:layout_marginLeft="10dp"
            android:id="@+id/navbar_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />



</LinearLayout>
