<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:background="@drawable/backgroung_color"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:src="@drawable/erationapplogo"
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/TODO"
        android:paddingTop="5dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/Tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_vertical"
        android:text="E-Ration Mobile App"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:textSize="42dp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        app:boxStrokeColor="@color/colorPrimaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtText_UserID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_id"
            android:fontFamily="sans-serif-condensed-light"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:textSize="22dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--EditText
        android:id="@+id/edtText_UserID"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="sans-serif-condensed-light"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/user_id"
        android:inputType="textPersonName"
        android:textSize="22dp" /-->

    <TextView
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:text="*Enter your smart card ID"
        android:textSize="18dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        app:boxStrokeColor="@color/colorPrimaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtText_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:fontFamily="sans-serif-condensed-light"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:password="true"
            android:textSize="22dp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <!--EditText
        android:id="@+id/edtText_Password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Password"
        android:inputType="textPersonName"
        android:fontFamily="sans-serif-condensed-light"
        android:password="true"
        android:textSize="22dp" /-->
    <TextView
    android:layout_width="258dp"
    android:layout_height="wrap_content"
    android:text="*Enter your password"
    android:textSize="18dp"
    android:layout_marginLeft="20dp"
    android:layout_marginBottom="30dp"/>


    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_button"
        android:fontFamily="serif"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/textView_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:onClick="onChangePassword"
        android:text="@string/Change_Password"
        android:textColor="#292626"
        android:textSize="18sp" />


</LinearLayout>