<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backgroung_color"
    android:orientation="vertical"
    android:layout_margin="4dp"
    android:padding="10dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="E-Ration Mobile App"
        android:textSize="36dp"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textAlignment="center" />
    <ImageView
        android:src="@drawable/erationapplogo"
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/TODO"
        android:paddingTop="5dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/chPass_Et_SmartCardID"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:hint="@string/user_id"
        android:inputType="textPersonName"
        android:textSize="22dp"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:text="*Enter your smart card ID"
        android:textSize="18dp"
        android:layout_marginLeft="12dp"
        app:layout_constraintVertical_bias="0.926" />

    <EditText
        android:id="@+id/chPass_Et_CardHolderName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:hint="Card Holder Name"
        android:inputType="textPersonName"
        android:textSize="22dp"
        app:layout_constraintVertical_bias="0.512" />

    <TextView
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:text="*Enter card holder full name"
        android:textSize="18dp"
        android:layout_marginLeft="12dp"
        app:layout_constraintVertical_bias="0.926" />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/chPass_Et_dob"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:hint="Card Holder DOB(dd/mm/yyyy)"
        android:inputType="textPersonName"
        android:password="true"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*Enter card holder date of birth(dd/mm/yyyy)"
        android:textSize="18dp"
        android:layout_marginLeft="12dp"
        app:layout_constraintVertical_bias="0.926" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter your New Password and Confirm Password here"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textAlignment="center"
        app:layout_constraintVertical_bias="0.926"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/chPass_Et_Newpassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:hint="New Password"
        android:inputType="textPersonName"
        android:password="true"
        android:textSize="22dp"
        />

    <EditText
        android:id="@+id/chPass_Et_ConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:hint="Confirm Password"
        android:inputType="textPersonName"
        android:password="true"
        android:textSize="22dp" />

    <Button
        android:id="@+id/chPass_btn_Change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_button"
        android:fontFamily="serif"
        android:text="@string/change"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:layout_marginTop="25dp"/>

</LinearLayout>